--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2"
   }
 }
