chore(Dockerfile, docker-compose.yaml): update exposed port and environment config Change exposed port from 3000 to 3099 in Dockerfile and update corresponding port mapping and environment variable in docker-compose.yaml.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
     container_name: slack-to-dingtalk
     environment:
       - DINGTALK_WEBHOOK=https://oapi.dingtalk.com/robot/send?access_token=
+      - PORT=3099
     ports:
-      - "3000:3000"
+      - "3099:3099"
     restart: unless-stopped
