--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "@slack/web-api": "^7.9.1",
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.5.0",
