--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     environment:
       - DINGTALK_WEBHOOK=https://oapi.dingtalk.com/robot/send?access_token=
       - PORT=3099
+      - SLACK_BOT_TOKEN=
     ports:
       - "3099:3099"
     restart: unless-stopped
